--- a/package.json
+++ b/package.json
@@ -5,5 +5,16 @@
   "main": "index.js",
   "repository": "https://github.com/TitaniumCortez/micro-service-scheduling-job",
   "author": "Renan Cortez",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "sucrase": "^3.14.1"
+  }
 }
