--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
   "repository": "https://github.com/TitaniumCortez/micro-service-scheduling-job",
   "author": "Renan Cortez",
   "license": "MIT",
+  "scripts": {
+    "start:dev": "nodemon --exec sucrase-node ./src/index.js"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-request-id": "^1.4.1",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
