--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
-    "winston": "^3.2.1"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.2.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "eslint": "^7.0.0",
