--- a/package.json
+++ b/package.json
@@ -7,23 +7,33 @@
   "author": "Renan Cortez",
   "license": "MIT",
   "scripts": {
-    "start:dev": "nodemon --exec sucrase-node ./src/index.js"
+    "start:dev": "nodemon --exec sucrase-node ./src/index.js",
+    "debug": "node --inspect-brk -r sucrase/register ./src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-request-id": "^1.4.1",
     "joi": "^14.3.1",
+    "moment": "^2.25.3",
     "swagger-ui-express": "^4.1.4",
     "winston": "^3.2.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@sucrase/jest-plugin": "^2.0.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^26.0.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "sucrase": "^3.14.1"
+  },
+  "jest": {
+    "transform": {
+      ".(js|jsx|ts|tsx)": "@sucrase/jest-plugin"
+    }
   }
 }
